fix typos in faq

--- a/front/assets/metodologija/kriterij1.inc.html
+++ b/front/assets/metodologija/kriterij1.inc.html
@@ -96,7 +96,7 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2 točka</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
