--- a/front/assets/metodologija/kriterij3.inc.html
+++ b/front/assets/metodologija/kriterij3.inc.html
@@ -266,11 +266,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>4</td>
+        <td>4 točke</td>
       </tr>
     </tbody>
   </table>
@@ -281,11 +281,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
     </tbody>
   </table>
