--- a/front/assets/metodologija/kriterij4.inc.html
+++ b/front/assets/metodologija/kriterij4.inc.html
@@ -11,11 +11,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -26,11 +26,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točki</td>
       </tr>
     </tbody>
   </table>
@@ -41,11 +41,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -56,11 +56,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -71,11 +71,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -86,11 +86,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>2</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -101,11 +101,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>1</td>
+        <td>1 točka</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -116,11 +116,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>1</td>
+        <td>1 točka</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -131,11 +131,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>1</td>
+        <td>1 točka</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
@@ -146,11 +146,11 @@
     <tbody>
       <tr>
         <td>da</td>
-        <td>1</td>
+        <td>1 točka</td>
       </tr>
       <tr>
         <td>ne</td>
-        <td>0</td>
+        <td>0 točk</td>
       </tr>
     </tbody>
   </table>
