--- a/front/assets/metodologija/kriterij1.inc.html
+++ b/front/assets/metodologija/kriterij1.inc.html
@@ -1,24 +1,30 @@
 <p>
   <strong>
-    Organizacija zagotavlja ustrezen nadzor nad poslovanjem (neodvisni člani upravnega/nadzornega
-    odbora, redna srečanja, zapisniki srečanj)
+    Organizacija zagotavlja ustrezen nadzor nad poslovanjem (neodvisni člani
+    upravnega/nadzornega odbora v večini, redna srečanja, zapisniki srečanj)
   </strong>
 </p>
 <p>
-  Ta kriterij zagotavlja, da ima organizacija delujoč nadzorni/upravni odbor oziroma svet zavoda
-  (gleda se namen, ne pravna oblika), ki redno nadzoruje delo poslovodstva in kjer večino članov z
-  glasovalno pravico predstavljajo neodvisni člani (za svoje delo niso plačani in na položaj niso
-  bili imenovani zaradi sorodstvenih/prijateljskih vezi). Podatki, ki jih pri tem organizacije
-  posredujejo:
+  Ta kriterij zagotavlja, da ima organizacija delujoč nadzorni/upravni odbor oziroma svet
+  zavoda (gleda se namen, ne formalno poimenovanje), ki redno nadzoruje delo poslovodstva
+  in kjer večino članov z glasovalno pravico predstavljajo neodvisni člani, torej tisti, ki za svoje
+  delo niso plačani in na položaj niso bili imenovani zaradi sorodstvenih/prijateljskih vezi.
+  Podatki, ki jih pri tem organizacije posredujejo so:
 </p>
 <ul>
   <li>seznam odborov, ki jih ima organizacija,</li>
-  <li>poimenski seznam članov odborov ter njihovo povezavo z organizacijo,</li>
+  <li>poimenski seznam članov odborov ter označba njihove povezave z organizacijo,</li>
   <li>opredelitev, kateri člani za svojo delo prejemajo nadomestilo,</li>
-  <li>datume sestankov v preteklem letu,</li>
-  <li>zapisniki zadnje seje.</li>
+  <li>datumi sestankov v preteklem letu,</li>
+  <li>zapisnik zadnje seje.</li>
 </ul>
-<p><em>Točkovnik</em></p>
+<p>
+  Organizacije, ki izpolnjujejo zgornje kriterije, zagotavljajo reden in ustrezen nadzor nad
+  delom poslovodstva, zato je tveganje za nepravilnosti ali zlorabo položaja nižje. Na ta način
+  pa se nevladne organizacije lahko tudi redno posvetujejo s svojimi deležniki o izzivih in
+  priložnostih, s katerimi se soočajo ter se nanje ustrezno odzovejo.
+</p>
+<p><em>Točkovnik za kriterij 1: nadzor nad poslovanjem</em></p>
 <p>1.1 - število sestankov nadzornega/upravnega odbora</p>
 <div class="table-responsive">
   <table>
@@ -34,12 +40,12 @@
       </tr>
       <tr>
         <td>število sestankov</td>
-        <td>več kot 7</td>
-        <td>6 ali 7</td>
-        <td>4 ali 5</td>
+        <td>5 in več</td>
+        <td>4</td>
         <td>3</td>
-        <td>manj kot 3</td>
-        <td>Ni bilo sestankov</td>
+        <td>2</td>
+        <td>1</td>
+        <td>Sestankov ni bilo</td>
       </tr>
     </tbody>
   </table>
@@ -60,7 +66,7 @@
       <tr>
         <td>število članov</td>
         <td>Več kot 5</td>
-        <td>od 3 do 5</td>
+        <td>Od 3 do 5</td>
         <td>2 ali 1</td>
         <td>Ni neodvisnih članov</td>
       </tr>
@@ -81,25 +87,25 @@
         <td>0</td>
       </tr>
       <tr>
-        <td>odstotek članov</td>
+        <td>Odstotek neodvisnih članov</td>
         <td>Več kot 75</td>
-        <td>od 75 do 50</td>
+        <td>50 do 75</td>
         <td>Manj kot 50</td>
         <td>Ni neodvisnih članov</td>
       </tr>
     </tbody>
   </table>
 </div>
-<p>1.4 - organizacija ima zapisnike sej</p>
+<p>1.4 - organizacija vodi zapisnike sej</p>
 <div class="table-responsive">
   <table>
     <tbody>
       <tr>
-        <td>da</td>
+        <td>Da</td>
         <td>2 točki</td>
       </tr>
       <tr>
-        <td>ne</td>
+        <td>Ne</td>
         <td>0 točk</td>
       </tr>
     </tbody>
