--- a/front/assets/metodologija/kriterij2.inc.html
+++ b/front/assets/metodologija/kriterij2.inc.html
@@ -1,25 +1,33 @@
 <p>
-  <strong
-    >Organizacija dosega strateške cilje organizacije (strateški cilji postavljeni, napredek se
-    spremlja vsaj na 2 leti, obstajajo poročila o napredku)</strong
-  >
+  <strong>
+    Organizacijo usmerjajo strateški cilji (strateški cilji postavljeni, napredek se spremlja
+    vsaj na 2 leti, obstajajo poročila o napredku)
+  </strong>
 </p>
 <p>
-  Poleg letnega načrta dela ima organizacija tudi strateške oziroma dolgoročne cilje, ki usmerjajo
-  njeno delo in aktivnosti proti uresničevanju njenega poslanstva. Pri tem samo poimenovanje
-  dokumenta ni pomembno, tudi kakovost dokumenta se ne točkuje. V tej fazi je pomembno le to, da ima
-  organizacija dolgoročne načrte in cilje in da se jih trudi uresničevati.
+  S kriterijem se preverja, ali organizacija svoje aktivnosti načrtuje in izvaja tako, da jo vodijo k
+  doseganju dolgoročnih ciljev in poslanstva, ali zgolj odgovarja na trenutne potrebe in
+  priložnosti (»lov za denarjem«). V praksi to pomeni, da ima organizacija poleg letnih načrtov
+  dela tudi strateške oziroma dolgoročne cilje, ki usmerjajo njeno delo in aktivnosti k
+  uresničevanju njenega poslanstva. Organizacija lahko za oblikovanje dokumenta, v katerem
+  so predstavljeni dolgoročni cilji, uporablja različne metode in pristope, pomembno je le, da
+  tak dokument obstaja. Tudi poimenovanje dokumenta je lahko različno – strateški načrt,
+  vizija razvoja organizacije v naslednjih petih letih, NVO 2025 ali kaj tretjega, pomembno je le,
+  da so v dokumentu cilji in načini za njihovo doseganje vsaj okvirno določeni.
 </p>
-<p>Podatki, ki jih pri tem organizacije posredujejo:</p>
+<p>Podatki, ki jih organizacije posredujejo so:</p>
 <ul>
   <li>opredelitev, ali organizacija strateško načrtuje,</li>
-  <li>predložitev strateškega načrta, če ga ima,</li>
-  <li>
-    opredelitev, ali organizacija spremlja doseganje strateških ciljev in predložitev poročila, če
-    obstaja.
-  </li>
+  <li>predložitev strateškega načrta oziroma drugega ustreznega dokumenta, če ga ima,</li>
+  <li>opredelitev, ali organizacija spremlja doseganje strateških ciljev in opis načina kako (npr. predstavitev napredka pri doseganju strateških ciljev na letnem zboru članov; priprava posebnih pisnih poročil; vključitev poglavja o doseganju strateških ciljev v letna vsebinska poročila …)</li>
+  <li>predložitev poročila o spremljanju strateških ciljev, če obstaja.</li>
 </ul>
-<p><em>Točkovnik</em></p>
+<p>
+  Ocenjevalci zaenkrat ne ocenjujejo kakovosti postavljenih ciljev in načinov za njihovo
+  doseganje, saj so področja delovanja nevladnih organizacij preveč raznolika in kompleksna,
+  da bi lahko zagotovili dovolj kompetentne neodvisne strokovnjake za vsakega od njih.
+</p>
+<p><em>Točkovnik za kriterij 2: strateško načrtovanje</em></p>
 <p>2.1 - organizacija ima strateški načrt</p>
 <div class="table-responsive">
   <table>
