--- a/front/assets/metodologija/kriterij4.inc.html
+++ b/front/assets/metodologija/kriterij4.inc.html
@@ -1,10 +1,13 @@
 <p>
-  Ker se nam zdi transparentnost organizacij eden od ključnih kazalnikov, bomo na spletnih straneh
-  preverjali, ali imajo organizacije javno objavljene spodnje informacije. Pri tem bo pomembno tudi,
-  da so informacije predstavljene na splošno razumljiv način in lahko dostopne (so objavljene na
-  mestu, kjer bi jih uporabnik iskal in v formatu, ki je splošni uporabi).
+  Ker je transparentnost organizacij eden od ključnih kazalnikov, ocenjevalci na njihovih
+  spletnih straneh preverjajo, ali imajo organizacije javno objavljene ključne informacije, ki so
+  zapisane spodaj. Pri tem je pomembno tudi, da so informacije predstavljene na splošno
+  razumljiv način in lahko dostopne (so objavljene na mestu, kjer bi jih uporabnik iskal, in v
+  formatu, ki je v splošni uporabi). Organizacije, ki spletnih strani nimajo, bodo pozvane, da te
+  podatke posredujejo neposredno ocenjevalcem, ki organizacijam, glede na prejete
+  dokumente, dodelijo ustrezno število točk.
 </p>
-<p><em>Točkovnik</em></p>
+<p><em>Točkovnik za kriterij 4: transparentnost</em></p>
 <p>4.1.1 - organizacija ima objavljena letna poročila o delu</p>
 <div class="table-responsive">
   <table>
@@ -20,7 +23,7 @@
     </tbody>
   </table>
 </div>
-<p>4.1.2 - objavljena letna poročila o delu so razumljiva</p>
+<p>4.1.2 - letna poročila o delu so razumljiva</p>
 <div class="table-responsive">
   <table>
     <tbody>
@@ -147,6 +150,21 @@
       <tr>
         <td>da</td>
         <td>1 točka</td>
+      </tr>
+      <tr>
+        <td>ne</td>
+        <td>0 točk</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<p>4.8 - Informacije so dostopne</p>
+<div class="table-responsive">
+  <table>
+    <tbody>
+      <tr>
+        <td>da</td>
+        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
