--- a/front/assets/metodologija/skupnaocena.inc.html
+++ b/front/assets/metodologija/skupnaocena.inc.html
@@ -1,14 +1,14 @@
 <p>
-  Skupna ocena oziroma število zvezdic, ki jih organizacija prejme, se izračuna s seštevanjem točk,
-  ki jih organizacija prejme na vsakem posameznem kriteriju. Najvišje število točk, ki jih
-  organizacija lahko prejme, je 70. Organizacije bodo prejele vseh pet zvezdic, če bodo zbrale več
-  kot 60 točk in ostale brez zvezdic, če bodo zbrale manj kot 30 točk oziroma, če bodo na katerem od
-  ključnih kriterijev prejele le 1 točko. Posamezni razredi so bili oblikovani glede na rezultate
-  tesnega razvrščanja in so zastavljeni na način, da odražajo dejansko odličnost organizacij,
-  pomembnost in uravnoteženost posameznih kriterijev (poudarek na finančnem upravljanju), hkrati pa
-  organizacije spodbujajo, da izboljšajo svoje delovanje in napredujejo. Predvsem na področju
-  transparentnosti lahko organizacije relativno enostavno prejmejo vse točke, jih je pa zelo malo,
-  ki jih dosegajo že sedaj.
+  Skupna ocena oziroma število zvezdic, ki jih organizacija prejme, se izračuna s seštevanjem
+  točk, ki jih organizacija prejme na vsakem posameznem kriteriju. Najvišje število točk, ki jih
+  organizacija lahko prejme, je 72. Organizacije bodo prejele vseh pet zvezdic, če bodo zbrale
+  več kot 60 točk in ostale brez zvezdic, če bodo zbrale manj kot 30 točk, oziroma če bodo na
+  katerem od ključnih kriterijev prejele le 1 točko. Posamezni razredi so bili oblikovani glede na
+  rezultate tesnega razvrščanja in so zastavljeni na način, da odražajo dejansko odličnost
+  organizacij, pomembnost in uravnoteženost posameznih kriterijev (poudarek na finančnem
+  upravljanju), hkrati pa organizacije spodbujajo, da izboljšajo svoje delovanje in napredujejo.
+  Predvsem na področju transparentnosti lahko organizacije relativno enostavno prejmejo vse
+  točke; je pa zelo malo organizacij, ki vse točke dosegajo že sedaj.
 </p>
 <p><em>Dodelitev zvezdic</em></p>
 <div class="table-responsive">
