--- a/front/assets/metodologija/kriterij4.inc.html
+++ b/front/assets/metodologija/kriterij4.inc.html
@@ -83,7 +83,7 @@
     </tbody>
   </table>
 </div>
-<p>4.3 - Objavljene so plače vodstva</p>
+<p>4.3 - Objavljeni so prejemki vodstva</p>
 <div class="table-responsive">
   <table>
     <tbody>
