--- a/front/assets/metodologija/kriterij1.inc.html
+++ b/front/assets/metodologija/kriterij1.inc.html
@@ -1,20 +1,20 @@
 <p>
   <strong>
     Organizacija zagotavlja ustrezen nadzor nad poslovanjem (neodvisni člani
-    upravnega/nadzornega odbora v večini, redna srečanja, zapisniki srečanj)
+    nadzornega organa v večini, redna srečanja, zapisniki srečanj)
   </strong>
 </p>
 <p>
-  Ta kriterij zagotavlja, da ima organizacija delujoč nadzorni/upravni odbor oziroma svet
-  zavoda (gleda se namen, ne formalno poimenovanje), ki redno nadzoruje delo poslovodstva
+  Ta kriterij zagotavlja, da ima organizacija delujoč organ (npr. nadzorni odbor ali svet
+  zavoda - gleda se namen, ne formalno poimenovanje), ki redno nadzoruje delo poslovodstva
   in kjer večino članov z glasovalno pravico predstavljajo neodvisni člani, torej tisti, ki za svoje
   delo niso plačani in na položaj niso bili imenovani zaradi sorodstvenih/prijateljskih vezi.
   Podatki, ki jih pri tem organizacije posredujejo so:
 </p>
 <ul>
-  <li>seznam odborov, ki jih ima organizacija,</li>
-  <li>poimenski seznam članov odborov ter označba njihove povezave z organizacijo,</li>
-  <li>opredelitev, kateri člani za svojo delo prejemajo nadomestilo,</li>
+  <li>seznam odborov, ki opravljajo funkcijo nadzora nad poslovodstvom,</li>
+  <li>poimenski seznam članov teh organov ter označba njihove povezave z organizacijo, na podlagi katere so bili imenovani/izbrani na ta položaj.</li>
+  <li>opredelitev, kateri člani organa za svojo delo prejemajo nadomestilo,</li>
   <li>datumi sestankov v preteklem letu,</li>
   <li>zapisnik zadnje seje.</li>
 </ul>
@@ -24,8 +24,12 @@
   pa se nevladne organizacije lahko tudi redno posvetujejo s svojimi deležniki o izzivih in
   priložnostih, s katerimi se soočajo ter se nanje ustrezno odzovejo.
 </p>
+<p>
+  Organizacije posredujejo podatke le o organih, ki so zadolženi za opravljanje <strong>nadzora nad
+  poslovodstvom</strong> in ne vseh organih, ki jih imajo (npr. komisije za etiko, pritožbe …).
+</p>
 <p><em>Točkovnik za kriterij 1: nadzor nad poslovanjem</em></p>
-<p>1.1 - število sestankov nadzornega/upravnega odbora</p>
+<p>1.1 - število sestankov nadzornega organa</p>
 <div class="table-responsive">
   <table>
     <tbody>
@@ -51,7 +55,7 @@
   </table>
 </div>
 <p>
-  1.2 - število neodvisnih članov nadzornega/upravnega odbora, ki imajo glasovalno pravico
+  1.2 - število neodvisnih članov nadzornega organa, ki imajo glasovalno pravico
 </p>
 <div class="table-responsive">
   <table>
@@ -74,7 +78,7 @@
   </table>
 </div>
 <p>
-  1.3 - odstotek neodvisnih članov nadzornega/upravnega odbora z glasovalno pravico
+  1.3 - odstotek neodvisnih članov z glasovalno pravico
 </p>
 <div class="table-responsive">
   <table>
