--- a/front/assets/metodologija/kriterij2.inc.html
+++ b/front/assets/metodologija/kriterij2.inc.html
@@ -23,7 +23,7 @@
   <li>predložitev poročila o spremljanju strateških ciljev, če obstaja.</li>
 </ul>
 <p>
-  Ocenjevalci zaenkrat ne ocenjujejo kakovosti postavljenih ciljev in načinov za njihovo
+  Ocenjevalci zaenkrat pregledujejo le obstoj teh dokumentov in ne ocenjujejo kakovosti postavljenih ciljev in načinov za njihovo
   doseganje, saj so področja delovanja nevladnih organizacij preveč raznolika in kompleksna,
   da bi lahko zagotovili dovolj kompetentne neodvisne strokovnjake za vsakega od njih.
 </p>
