--- a/front/assets/metodologija/kriterij3.inc.html
+++ b/front/assets/metodologija/kriterij3.inc.html
@@ -4,25 +4,24 @@
   prepričanja, da organizacije, ki so pri porabi sredstev bolj učinkovite, lahko z manj naredijo
   več in svojim uporabnikom ponudijo boljše storitve. Prav ti – torej uporabniki, ne glede na to,
   kdo to so – pa so tisti, katerim želi pomagati donator. Strah pred nenamensko porabo
-  sredstev in njihovo zlorabo, je razlog, da se veliko rajši odločajo za donacije v materialu.
-  Vsakič, ko v javnost pride zgodba o zlorabi sredstev to vpliva na celotni sektor. Najboljši
+  sredstev in njihovo zlorabo, je glavni razlog, da se rajši odločajo za donacije v materialu.
+  Vsakič, ko v javnost pride zgodba o zlorabi sredstev ene organizacije to vpliva na celotni sektor. Najboljši
   možni odgovor na to je večja in proaktivna transparentnost – tudi in predvsem glede porabe
   sredstev.
 </p>
 <p>
-  Zaradi vsega naštetega so podatki, ki jih morajo organizacije posredovati, precej obsežni in
+  Zaradi vsega naštetega so finančni podatki, ki jih morajo organizacije posredovati, precej obsežni in
   vključujejo:
 </p>
 <ul>
   <li>finančno poročilo, pripravljeno po vzorcu iz e-obrazca, ki zajema podatke o prihodkih in odhodkih organizacije v preteklem letu,</li>
   <li>seznam posameznih financerjev in višino prejetih sredstev,</li>
   <li>finančno poročilo, ki je bilo oddano na AJPES,</li>
-  <li>opredelitev, ali bi morali imeti revidirana poročila,</li>
+  <li>opredelitev, ali ima organizacija revidirana finančna poročila,</li>
   <li>revidirano finančno poročilo, če obstaja,</li>
   <li>finančni načrt za tekoče leto,</li>
-  <li>seznam danih in prejetih posojil s strani povezanih oseb (zaposleni, člani upravnega/nadzornega odbora in njihovi družinski člani),</li>
-  <li>sistematizacijo delovnih mest in plačno politiko,</li>
-  <li>višino plač vodstva,</li>
+  <li>seznam danih in prejetih posojil s strani povezanih oseb (zaposleni, člani upravnega/nadzornega organa in njihovi družinski člani),</li>
+  <li>seznam delovnih mest in plačno politiko,</li>
   <li>razmerja med najnižjo, povprečno in najvišjo plačo.</li>
 </ul>
 <p><em>Kriterij 3.1: odstotek sredstev, ki jih namenjajo programu</em></p>
@@ -65,7 +64,7 @@
 <p>
   <strong>Ker gre za ključni kriterij, bodo vse organizacije, ki za program namenijo manj kot 70
   % sredstev, avtomatično ostale brez zvezdic, ne glede na siceršnji seštevek prejetih
-  točk.</strong> Seštevek točk pa je na portalu še vedno viden, če si obiskovalec ogleda podrobnosti
+  točk.</strong> Število točk pa je na portalu še vedno vidno, če si obiskovalec ogleda podrobnosti
   izračuna.
 </p>
 <p>
@@ -79,9 +78,9 @@
   vodenje organizacije (letni razgovori, stroški računovodstva, tekoči stroški …). Meja 30 % je
   bila ob posvetovanju s ključnimi deležniki določena glede na obstoječo prakso in dejansko
   stanje v slovenskih NVO. Meja je postavljena dovolj visoko, da nevladnim organizacijam
-  omogoča normalno delovanje, a je hkrati dovolj nizka, da morajo biti pri porabi skrbni.
+  omogoča normalno delovanje, a je hkrati dovolj nizka, da morajo biti pri porabi skrbne.
   Točkovanje organizacije spodbuja, da bi bili ti stroški čim nižji, kar posledično pomeni, da
-  bodo lahko več sredstev namenile uresničevanju svojega poslanstva.
+  bo več sredstev namenjeno uresničevanju njihovega poslanstva.
 </p>
 <p><em>Točkovnik za kriterij 3.2 – odstotek sredstev za splošno delovanje</em></p>
 <p>3.2 - odstotek sredstev, ki jih organizacija nameni za splošno delovanje</p>
@@ -109,8 +108,8 @@
 </div>
 <p>
   <strong>Ker gre za ključni kriterij, bodo vse organizacije, ki bodo presegle mejo 30 %,
-    avtomatično ostale brez zvezdic, ne glede na siceršnji seštevek prejetih točk.</strong> Seštevek
-  točk pa je na portalu še vedno viden, če si obiskovalec ogleda podrobnosti izračuna.
+    avtomatično ostale brez zvezdic, ne glede na siceršnji seštevek prejetih točk.</strong> Število
+  točk pa je na portalu še vedno vidno, če si obiskovalec ogleda podrobnosti izračuna.
 </p>
 <p><em>Kriterij 3.3: znesek, ki ga organizacija porabi za vsakih zbranih 100 EUR</em></p>
 <p>
