--- a/front/assets/metodologija/kriterij4.inc.html
+++ b/front/assets/metodologija/kriterij4.inc.html
@@ -7,6 +7,11 @@
   podatke posredujejo neposredno ocenjevalcem, ki organizacijam, glede na prejete
   dokumente, dodelijo ustrezno število točk.
 </p>
+<p>
+  Opomba: tudi če ima organizacija posamezno informacijo na spletni strani sicer objavljeno, a
+  je ta dostopna le z neposredno povezavo oziroma tako »skrita«, da je povprečni uporabnik
+  ne more najti, bo organizacija na tem kriteriju vseeno ostala brez točk.
+</p>
 <p><em>Točkovnik za kriterij 4: transparentnost</em></p>
 <p>4.1.1 - organizacija ima objavljena letna poročila o delu</p>
 <div class="table-responsive">
@@ -98,6 +103,13 @@
     </tbody>
   </table>
 </div>
+<p class="small font-weight-light">
+  Opomba: pri organizacijah, ki jih vodjo
+  prostovoljci se šteje, da je ta kriteriji
+  izpolnjen, če ima organizacija na spletni
+  strani jasno zapisano, da vodstvo za svoje
+  delo ne prejema plačila.
+</p>
 <p>4.4 - objavljeno je razmerje med plačami</p>
 <div class="table-responsive">
   <table>
@@ -113,6 +125,12 @@
     </tbody>
   </table>
 </div>
+<p class="small font-weight-light">
+  Opomba: pri organizacijah, ki nimajo
+  zaposlenih se šteje, da je ta kriterij
+  izpolnjen, če je na spletni strani jasno
+  zapisano, da organizacija nima zaposlenih.
+</p>
 <p>4.5 - objavljen je seznam ključnih zaposlenih</p>
 <div class="table-responsive">
   <table>
@@ -128,7 +146,12 @@
     </tbody>
   </table>
 </div>
-<p>4.6 - objavljeni so člani nadzornega/upravnega odbora</p>
+<p class="small font-weight-light">
+  Opomba: organizacije, ki nimajo zaposlenih
+  vpišejo imena prostovoljcev, ki opravljajo
+  ključne naloge v organizaciji.
+</p>
+<p>4.6 - objavljeni so člani nadzornega organa</p>
 <div class="table-responsive">
   <table>
     <tbody>
@@ -150,21 +173,6 @@
       <tr>
         <td>da</td>
         <td>1 točka</td>
-      </tr>
-      <tr>
-        <td>ne</td>
-        <td>0 točk</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<p>4.8 - Informacije so dostopne</p>
-<div class="table-responsive">
-  <table>
-    <tbody>
-      <tr>
-        <td>da</td>
-        <td>2 točki</td>
       </tr>
       <tr>
         <td>ne</td>
